# ClipboardAI

./: .gitignore  ClipboardAI.sln  README.md  RELEASE_NOTES.md  modified_settings.json  settings_backup.json
Backup_Features/: EmailTemplateExpansionPlugin.cs  JsonFormatterPlugin.cs  OcrPlugin.cs  PasswordGenerationPlugin.cs  TableConversionPlugin.cs
ClipboardAI.Common/: AppSettings.cs  ClipboardAI.Common.csproj  Feature.cs  FeatureManager.cs  ModelDownloader.cs  MultilingualModelService.cs  PluginSettingsService.cs  TextProcessingType.cs
ClipboardAI.Core/: CMakeLists.txt  ClipboardAI.Core.vcxproj
ClipboardAI.Core/include/: AIProcessor.h
ClipboardAI.Core/src/: AIProcessor.cpp  dllmain.cpp
ClipboardAI.InnoSetup/: ClipboardAI.iss  LICENSE.txt  README.txt
ClipboardAI.Plugin.EmailExpansion/: EmailTemplateExpansionPlugin.cs
ClipboardAI.Plugin.GrammarChecker/: GrammarCheckerPlugin.cs
ClipboardAI.Plugin.JsonFormatter/: JsonFormatterPlugin.cs
ClipboardAI.Plugin.KeywordExtraction/: KeywordExtractionPlugin.cs
ClipboardAI.Plugin.LanguageDetection/: ClipboardAI.Plugin.LanguageDetection.csproj  DetectLanguageWithHuggingFace.cs  LanguageDetectionPlugin.cs  LinguisticFeatures.cs
ClipboardAI.Plugin.OCR/: ClipboardAI.Plugin.OCR.csproj  OcrPlugin.cs  OnnxOcrProcessor.cs
ClipboardAI.Plugin.PasswordGen/: ClipboardAI.Plugin.PasswordGen.csproj  PasswordGenerationPlugin.cs
ClipboardAI.Plugin.SmartFormatting/: SmartFormattingPlugin.cs
ClipboardAI.Plugin.TableConversion/: TableConversionPlugin.cs
ClipboardAI.Plugins/: AIFeaturePluginBase.cs  AIFeatureType.cs  (+10 more)
(+18 files in other folders)
